# seedance-2.0-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: image_to_image.py  image_to_video.py  mcp_demo.md  text_to_image.py  text_to_video.py
seeda_sdk/: __init__.py  client.py  exceptions.py  mcp_server.py  types.py
tests/: test_client.py
